--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="https://cdn-icons-png.flaticon.com/512/243/243925.png"
-    />
+    <link rel="icon" href="./icon copy.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -27,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Online Calendar</title>
+    <title>Great Plan</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
